fix off-centered hover line on main navigation

--- a/style.css
+++ b/style.css
@@ -240,7 +240,6 @@ p {
 .logo {
   margin: 0 auto;
   width: fit-content;
-  margin-top: 2.2rem;
 }
 
 .logo img {
@@ -369,15 +368,13 @@ header h2 {
   margin-left: 0px;
 }
 
-.main-navbar-nav .nav-item:first-child a {
-  padding-left: 0px;
-}
-
 .main-navbar-nav .nav-item:last-child {
   margin-right: 0px;
 }
 
+.main-navbar-nav .nav-item:first-child a,
 .main-navbar-nav .nav-item:last-child a {
+  padding-left: 0px;
   padding-right: 0px;
 }
 
